<resources>
    <string name="app_name">Mi menú</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_settings_menu">Gestión del menú</string>
    <string name="go_back">Ir atras</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">Contraseña</string>
    <string name="password_confirm">Confirmar contraseña</string>
    <string name="email">Email</string>
    <string name="business_name">Nombre de la empresa</string>
    <string name="legend_recovery_password">Ingresa el correo electrónico de registro y pulsa en recuperar contraseña. \nHaz clic en el enlace que recibiras para verificar tu dirección de correo electrónico, y cambia tu contraseña</string>
    <string name="action_log_out">Cerrar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_available">Permisos habilitados.</string>
    <string name="grant_storage_permission">Permite que Mi menú tenga acceso a tu dispositivo habilitando los permisos al contenido multimedia y a los archivos.</string>
    <string name="settins_grant_storage_permission">Permite que Mi menú tenga acceso a tu dispositivo habilitando los permisos al contenido multimedia y a los archivos; ingresa en ajustes y concede todos los permisos.</string>
    <string name="action_accept">Aceptar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="attention">Atención</string>
</resources>