<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.ResetPasswordActivity">

    <RelativeLayout
        android:id="@+id/rly_header_specialties_list"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="?attr/colorPrimary"
        android:paddingLeft="24dp"
        android:paddingTop="18dp"
        android:paddingRight="24dp"
        android:paddingBottom="18dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/go_back"
            app:srcCompat="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="22dp"
            android:layout_marginLeft="22dp"
            android:layout_toEndOf="@+id/btn_back"
            android:layout_toRightOf="@+id/btn_back"
            android:text="Recuperar contraseña"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/iv_recovery_pass"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_recovery_pass"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="0dp"
            app:tint="@color/colorAzul"
            tools:targetApi="lollipop" />


        <LinearLayout
            android:id="@+id/ly_conten"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_recovery_pass"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/legend_recovery_password"
                    android:textColor="@color/colorTextPrimary"
                    android:textStyle="bold" />

                <!--Imput email-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:nextFocusDown="@id/et_email"
                        android:textSize="15sp"
                        android:theme="@style/TextInputLAyoutAppearance">

                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="46dp"
                            android:drawableStart="@drawable/ic_email"
                            android:drawablePadding="5dp"
                            android:drawableTint="@color/colorGris"
                            android:fontFamily="sans-serif-light"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/colorTextPrimary"
                            android:textColorHint="@color/colorGris"
                            android:textSize="20sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>


                <Button
                    android:id="@+id/btn_recovery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/shape_curve_2"
                    android:backgroundTint="@color/colorAzul"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:paddingLeft="60dp"
                    android:paddingTop="2dp"
                    android:paddingRight="60dp"
                    android:paddingBottom="2dp"
                    android:text="RECUPERAR CONTASEÑA"
                    android:textColor="#ffffff"
                    android:textSize="20dp"
                    android:textStyle="normal" />

            </LinearLayout>

        </LinearLayout>

        <!--Barra de progreso-->
        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/pb"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:visibility="invisible" />

    </RelativeLayout>

</LinearLayout>