<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="0dp"
    card_view:cardElevation="1dp"
    card_view:cardPreventCornerOverlap="false"
    card_view:contentPadding="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="0dp">


        <!-- Info patient: photo, fullname, etc.-->
        <RelativeLayout
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_arrow_back"
                app:tint="@color/colorRojo" />

            <LinearLayout
                android:id="@+id/ly_conten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="CREAR UNA CUENTA"
                    android:textColor="@color/colorTextPrimary"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/crdv_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_margin="5dp">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_register"
                        app:civ_border_color="@color/colorAccent"
                        app:civ_border_width="0dp"
                        app:tint="@color/colorAzul"
                        tools:targetApi="lollipop" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="25dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <!--Nombre del negocio-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:nextFocusDown="@id/et_business_name"
                            android:textSize="15sp"
                            android:theme="@style/TextInputLAyoutAppearance">

                            <EditText
                                android:id="@+id/et_business_name"
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:drawableStart="@drawable/ic_business"
                                android:drawablePadding="5dp"
                                android:drawableTint="@color/colorGris"
                                android:fontFamily="sans-serif-light"
                                android:hint="@string/business_name"
                                android:inputType="text"
                                android:textColor="@color/colorTextPrimary"
                                android:textColorHint="@color/colorGris"
                                android:textSize="20sp" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <!--Imput email-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:nextFocusDown="@id/et_email"
                            android:textSize="15sp"
                            android:theme="@style/TextInputLAyoutAppearance">

                            <EditText
                                android:id="@+id/et_email"
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:drawableStart="@drawable/ic_email"
                                android:drawablePadding="5dp"
                                android:drawableTint="@color/colorGris"
                                android:fontFamily="sans-serif-light"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:textColor="@color/colorTextPrimary"
                                android:textColorHint="@color/colorGris"
                                android:textSize="20sp" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>


                    <!--Input de contraseña-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <!--<ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/password"
                            app:srcCompat="@drawable/ic_lock" />-->

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:nextFocusDown="@id/et_pass"
                            android:textSize="15sp"
                            android:theme="@style/TextInputLAyoutAppearance"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/et_pass"
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:drawableStart="@drawable/ic_lock"
                                android:drawablePadding="5dp"
                                android:drawableTint="@color/colorGris"
                                android:fontFamily="sans-serif-light"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:textColor="@color/colorTextPrimary"
                                android:textColorHint="@color/colorGris"
                                android:textSize="20sp" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <!--<ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/password"
                            app:srcCompat="@drawable/ic_lock" />-->

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:nextFocusDown="@id/et_confirm_pass"
                            android:textSize="15sp"
                            app:helperText="¡Requiere minimo 8 caracteres!"
                            app:helperTextTextColor="@color/colorAccent"
                            android:theme="@style/TextInputLAyoutAppearance"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/et_confirm_pass"
                                android:layout_width="match_parent"
                                android:layout_height="46dp"
                                android:drawableStart="@drawable/ic_lock"
                                android:drawablePadding="5dp"
                                android:drawableTint="@color/colorGris"
                                android:fontFamily="sans-serif-light"
                                android:hint="@string/password_confirm"
                                android:inputType="textPassword"
                                android:textColor="@color/colorTextPrimary"
                                android:textColorHint="@color/colorGris"
                                android:textSize="20sp" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_enter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/shape_curve_2"
                        android:backgroundTint="@color/colorAzul"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:gravity="center"
                        android:paddingLeft="60dp"
                        android:paddingTop="2dp"
                        android:paddingRight="60dp"
                        android:paddingBottom="2dp"
                        android:text="CREAR CUENTA"
                        android:textColor="#ffffff"
                        android:textSize="20dp"
                        android:textStyle="normal" />


                </LinearLayout>

            </LinearLayout>

            <!--Barra de progreso-->
            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/pb"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:visibility="invisible" />

        </RelativeLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>